--- a/core.opam
+++ b/core.opam
@@ -12,16 +12,16 @@ build: [
 ]
 depends: [
   "ocaml"                    {>= "4.08.0"}
-  "base"                     {>= "v0.15" & < "v0.16"}
-  "core_kernel"              {>= "v0.15" & < "v0.16"}
-  "expect_test_helpers_core" {>= "v0.15" & < "v0.16"}
-  "jane-street-headers"      {>= "v0.15" & < "v0.16"}
-  "jst-config"               {>= "v0.15" & < "v0.16"}
-  "ocaml_intrinsics"         {>= "v0.15" & < "v0.16"}
-  "ppx_jane"                 {>= "v0.15" & < "v0.16"}
-  "record_builder"           {>= "v0.15" & < "v0.16"}
-  "sexplib"                  {>= "v0.15" & < "v0.16"}
-  "timezone"                 {>= "v0.15" & < "v0.16"}
+  "base"                     {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
+  "core_kernel"              {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
+  "expect_test_helpers_core" {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
+  "jane-street-headers"      {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
+  "jst-config"               {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
+  "ocaml_intrinsics"         {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
+  "ppx_jane"                 {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
+  "record_builder"           {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
+  "sexplib"                  {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
+  "timezone"                 {>= "v0.15" & < "v0.16" & >= "v0.15" & < "v0.16"}
   "base-threads"
   "dune"                     {>= "2.0.0"}
   "spawn"                    {>= "v0.12"}
